# brscan-skey-gui

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  build_standalone.sh  install.sh  pyproject.toml  หมายเหตุ.txt
assets/: brscan-skey-gui.desktop
src/: config_manager.cpp  config_manager.h  config_tab.cpp  config_tab.h  main.py  main_window.cpp  main_window.h
src/core/: config_manager.py
src/ui/: config_tab.py  main_window.py  style.py
